--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@angular/forms": "~10.1.6",
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
-    "@angular/router": "~10.1.6",
+    "@ngrx/store": "^8.6.1",
+    "@ngrx/store-devtools": "^8.6.1",
     "rxjs": "~6.6.0",
     "todomvc-app-css": "^2.4.2",
     "tslib": "^2.0.0",
